# rawenv

./: .coderabbit.yaml  .editorconfig  .gitignore  .shellcheckrc  .swift-format  .swiftlint.yml  .yamllint  DESIGN.md  LESSONS.md  LICENSE  NEXT_STEPS.md  PLAN.md  README.md  RULES.md  build.zig  build.zig.zon  install.sh  package-lock.json  package.json  playwright.config.ts  rawenv.toml  test_ascii  tsconfig.json
.githooks/: install.sh  post-commit  pre-commit  pre-push  quality-guards.sh  quality-guards.test.sh
.github/workflows/: ci.yml  gui-tests.yml  release.yml
design/prototype/: ai-engine.js  app.js  components.js  data.js  index.html  screens-ai.js  screens-deploy.js  screens-extra.js  screens-gui.js  screens-installer.js  screens-projects.js  screens-tui.js  settings-pages.js  style.css
design/theme/: component-spec.md  imgui_theme.zig
design/tokens/: tokens.json
docs/: _headers  _redirects  benchmarks.md  competitive-analysis.md  exploratory-report.md  index.html  install.sh  qa-findings.md  style.css  ui-exploration-findings.md  ui-findings-ai-chat.md  ui-findings-connections-tunnel.md  ui-findings-cross-cutting.md  ui-findings-deploy.md  ui-findings-installer-uninstall.md  ui-findings-menubar.md  ui-findings-projects.md  ui-findings-state-combinations.md  ui-settings-exploration.md  wrangler.toml
docs/arch/: linux.md  macos.md  windows.md
docs/guide/: README.md  configuration.md  migration.md  quickstart.md  services.md  troubleshooting.md
docs/plans/: omni-metal-web-ui.md
gui/linux/: Dockerfile.test  meson.build
gui/linux/data/: README.md
gui/linux/src/: app.vala  style.css  window.vala
gui/linux/src/interfaces/: ai_provider.vala  data_repository.vala  navigation_service.vala
gui/linux/src/models/: ai_message.vala  connection.vala  log_entry.vala  project.vala  service.vala  settings.vala
gui/linux/src/services/: mock_ai_provider.vala  mock_data_repository.vala  mock_deploy_engine.vala  mock_installer_engine.vala  mock_scanner_engine.vala  mock_service_manager.vala
gui/linux/src/viewmodels/: ai_chat_viewmodel.vala  connections_viewmodel.vala  dashboard_viewmodel.vala  deploy_viewmodel.vala  installer_viewmodel.vala  projects_viewmodel.vala  settings_viewmodel.vala
gui/linux/src/views/ai_chat/: ai_chat_view.vala
gui/linux/src/views/connections/: connections_view.vala
gui/linux/src/views/dashboard/: dashboard_view.vala
gui/linux/src/views/deploy/: deploy_view.vala
gui/linux/src/views/installer/: installer_view.vala
gui/linux/src/views/projects/: projects_view.vala
gui/linux/src/views/settings/: settings_view.vala
gui/linux/src/views/tunnel/: tunnel_view.vala
gui/linux/src/views/uninstall/: uninstall_view.vala
gui/linux/tests/e2e/: conftest.py  test_ai_chat.py  test_connections.py  test_dashboard.py  test_deploy.py  test_settings.py
gui/linux/tests/unit/: test_ai_chat_viewmodel.vala  test_connections_viewmodel.vala  test_dashboard_viewmodel.vala  test_deploy_viewmodel.vala  test_installer_viewmodel.vala  test_projects_viewmodel.vala  test_settings_viewmodel.vala
gui/macos/: Package.swift  Rawenv-DeveloperID.entitlements  Rawenv.entitlements  project.yml
gui/macos/Rawenv.xcodeproj/: project.pbxproj
gui/macos/UITests/: RawenvUITests.swift
gui/macos/scripts/: build-app.sh  notarize.sh  test-in-vm.sh
gui/windows/: Directory.Build.props  Rawenv.sln
gui/windows/Rawenv/: App.xaml  App.xaml.cs  Rawenv.csproj
gui/windows/Rawenv.E2E/: Rawenv.E2E.csproj  TestSetup.cs
gui/windows/Rawenv.Tests/: Rawenv.Tests.csproj
packaging/: build-dmg.sh
packaging/appstore/: build.sh  gen-icons.sh
packaging/aur/: PKGBUILD
packaging/gui/: DashboardApp.swift  build.sh
packaging/homebrew/: rawenv.rb
packaging/installer/: InstallerApp.swift  build.sh
qa/: REMEDIATION.md  feedback.md  notes.md  production-readiness-prompt.md  reviews.md
qa/exploration/: FINDINGS.md  README.md  explore-projects.swift  explore-setup.swift  explore.swift  manifest-projects.json  manifest-setup.json  manifest.json  verify-franken.swift
scripts/: benchmark.sh  gen-homebrew-formula.sh  install-macos.sh  timeout.py  vm-linux.sh  vm-windows.sh
shared/: README.md  mock-data.json  schema.json
shared/recipes/: caches-queues-search.json  cms-ecommerce.json  databases.json  forums-erp-crm.json  frameworks.json  index.json  runtimes-monitoring-misc.json  selfhosted.json  templates.json
src/ai/: cascade.zig  chat.zig  context.zig  main.zig  proactive.zig  provider.zig
src/cells/: cell.zig  linux.zig  macos.zig  main.zig  windows.zig
src/cli/: commands.zig  main.zig
src/core/: compat.zig  compose.zig  config.zig  detector.zig  discover.zig  exec.zig  resolver.zig  service.zig  shell.zig  store.zig
src/deploy/: ansible.zig  image.zig  main.zig  orchestrator.zig  terraform.zig
src/gui/: app.zig  theme.zig  widgets.zig
src/gui/screens/: dashboard.zig  menubar.zig  settings.zig
src/network/: connections.zig  dns.zig  main.zig  proxy.zig  tls.zig  tunnel.zig
src/platform/: linux.zig  macos.zig  windows.zig
src/tui/: app.zig  data_loader.zig  main.zig  theme.zig  widgets.zig
src/tui/views/: ai_chat.zig  (+4 more)
tests/: ai_test.zig  cells_test.zig  compose_test.zig  config_test.zig  deploy_test.zig  detector_test.zig  gui_test.zig  network_test.zig  service_test.zig  store_test.zig  tui_test.zig
tests/e2e/: ai-chat.spec.ts  connections.spec.ts  dashboard.spec.ts  deploy.spec.ts  helpers.ts  installer.spec.ts  os-theme.spec.ts  projects.spec.ts  settings.spec.ts  tui.spec.ts  tunnel.spec.ts  uninstall.spec.ts
tests/integration/: add_install_e2e_test.zig  add_test.zig  compose_import_e2e_test.zig  deploy_e2e_test.zig  detect_coverage_e2e_test.zig  detect_test.zig  dns_proxy_tls_e2e_test.zig  e2e_combos_test.zig  e2e_lifecycle_test.zig  errors_test.zig  full_lifecycle_e2e_test.zig  help_test.zig  init_test.zig  migration_e2e_test.zig  multi_project_isolation_test.zig  network_e2e_test.zig  resolver_coverage_e2e_test.zig  service_lifecycle_e2e_test.zig  services_test.zig  shell_isolation_e2e_test.zig  status_test.zig  uninstall_e2e_test.zig
(+167 files in other folders)
