project('rawenv-gui', 'vala', 'c',
  version: '0.1.0',
  meson_version: '>= 0.62.0',
)

gnome = import('gnome')

deps = [
  dependency('gtk4', version: '>= 4.10'),
  dependency('libadwaita-1', version: '>= 1.4'),
  dependency('json-glib-1.0'),
  dependency('glib-2.0'),
  dependency('gobject-2.0'),
  dependency('gio-2.0'),
]

src = files(
  'src/app.vala',
  'src/window.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/services/mock_service_manager.vala',
  'src/services/mock_installer_engine.vala',
  'src/services/mock_scanner_engine.vala',
  'src/services/mock_deploy_engine.vala',
  'src/viewmodels/dashboard_viewmodel.vala',
  'src/viewmodels/settings_viewmodel.vala',
  'src/viewmodels/ai_chat_viewmodel.vala',
  'src/viewmodels/connections_viewmodel.vala',
  'src/viewmodels/deploy_viewmodel.vala',
  'src/viewmodels/installer_viewmodel.vala',
  'src/viewmodels/projects_viewmodel.vala',
  'src/views/dashboard/dashboard_view.vala',
  'src/views/settings/settings_view.vala',
  'src/views/ai_chat/ai_chat_view.vala',
  'src/views/connections/connections_view.vala',
  'src/views/deploy/deploy_view.vala',
  'src/views/tunnel/tunnel_view.vala',
  'src/views/installer/installer_view.vala',
  'src/views/projects/projects_view.vala',
  'src/views/uninstall/uninstall_view.vala',
)

executable('rawenv-gui', src,
  dependencies: deps,
  install: true,
)

# Unit tests
test_deps = deps

test_dashboard_vm = executable('test-dashboard-viewmodel',
  'tests/unit/test_dashboard_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/dashboard_viewmodel.vala',
  dependencies: test_deps,
)
test('dashboard-viewmodel', test_dashboard_vm)

test_settings_vm = executable('test-settings-viewmodel',
  'tests/unit/test_settings_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/settings_viewmodel.vala',
  dependencies: test_deps,
)
test('settings-viewmodel', test_settings_vm)

test_ai_chat_vm = executable('test-ai-chat-viewmodel',
  'tests/unit/test_ai_chat_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/ai_chat_viewmodel.vala',
  dependencies: test_deps,
)
test('ai-chat-viewmodel', test_ai_chat_vm)

test_connections_vm = executable('test-connections-viewmodel',
  'tests/unit/test_connections_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/connections_viewmodel.vala',
  dependencies: test_deps,
)
test('connections-viewmodel', test_connections_vm)

test_deploy_vm = executable('test-deploy-viewmodel',
  'tests/unit/test_deploy_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/deploy_viewmodel.vala',
  dependencies: test_deps,
)
test('deploy-viewmodel', test_deploy_vm)

test_installer_vm = executable('test-installer-viewmodel',
  'tests/unit/test_installer_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/installer_viewmodel.vala',
  dependencies: test_deps,
)
test('installer-viewmodel', test_installer_vm)

test_projects_vm = executable('test-projects-viewmodel',
  'tests/unit/test_projects_viewmodel.vala',
  'src/models/service.vala',
  'src/models/log_entry.vala',
  'src/models/ai_message.vala',
  'src/models/connection.vala',
  'src/models/project.vala',
  'src/models/settings.vala',
  'src/interfaces/data_repository.vala',
  'src/interfaces/navigation_service.vala',
  'src/interfaces/ai_provider.vala',
  'src/services/mock_data_repository.vala',
  'src/services/mock_ai_provider.vala',
  'src/viewmodels/projects_viewmodel.vala',
  dependencies: test_deps,
)
test('projects-viewmodel', test_projects_vm)
